Added carousel, made minor adjustments, and removed unused styles

--- a/style/styles.css
+++ b/style/styles.css
@@ -32,3 +32,12 @@ footer {
 p {
 	padding: 2%;
 }
+.carousel-container {
+	width: 20%;
+	margin: auto;
+}
+.carousel-inner > .item > img,
+      .carousel-inner > .item > a > img {
+      width: 100%;
+      margin: auto;
+   }
