--- a/style/styles.css
+++ b/style/styles.css
@@ -35,6 +35,7 @@ p {
 .carousel-container {
 	width: 20%;
 	margin: auto;
+	margin-bottom: 1%;
 }
 .carousel-inner > .item > img,
       .carousel-inner > .item > a > img {
