--- a/style/styles.css
+++ b/style/styles.css
@@ -48,9 +48,14 @@ p {
 	width: 250px;
 	margin: auto;
 	margin-bottom: 1%;
+
 }
 .carousel-inner > .item > img,
       .carousel-inner > .item > a > img {
       width: 100%;
       margin: auto;
    }
+.carousel-indicators {
+	position: relative;
+	top: 420px
+}
