--- a/style/styles.css
+++ b/style/styles.css
@@ -59,3 +59,14 @@ p {
 	position: relative;
 	top: 420px
 }
+#contactUsForm {
+    position: relative;
+    left: 10%;
+    text-align: left;
+    border-collapse: separate;
+        border-spacing: 10px 20px;
+    border: 4px solid #64e5dd;
+	border-radius: 10px;
+	padding: 20px;
+	width: 80%;
+}
