--- a/style/styles.css
+++ b/style/styles.css
@@ -40,6 +40,7 @@ section {
 }
 footer {
 	padding: 1% 0 1% 0;
+	background-color: #333333;
 }
 p {
 	padding: 2%;
@@ -69,4 +70,14 @@ p {
 	border-radius: 10px;
 	padding: 20px;
 	width: 80%;
+}
+::selection {
+    background: #f74559;
+}
+::-moz-selection {
+    back
+}
+
+.text-center {
+	background-color: #333333;
 }
